<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen60"
        android:background="#00000000"
        android:elevation="@dimen/dimen5"
        app:titleTextAppearance="@style/AppTheme_a"
        app:navigationIcon="@drawable/wifi_music_list"
        app:title="@string/sleepdata"
        app:titleTextColor="@android:color/white"
        />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
<FrameLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
        <com.example.administrator.songshuapplication.modle.MyView
            android:id="@+id/myview_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen15"
            android:layout_marginLeft="@dimen/dimen500"
           android:layout_weight="2"
            app:circleTextColor="#999999"
            app:circleTextSize="@dimen/textSize12"
            />
    <TextView
        android:id="@+id/youxiu_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/dimen37"
        android:layout_marginBottom="@dimen/dimen40"
        android:textSize="@dimen/dimen50"
        android:textColor="@android:color/white"
        android:text="@string/jiankang"
        />
    <TextView
        android:id="@+id/jiankang_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/dimen37"
        android:layout_marginTop="@dimen/dimen10"
        android:textSize="@dimen/textSize30"
        android:textColor="@android:color/white"
        android:text="@string/sleepdaizi"
        />

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginRight="@dimen/dimen20"
    android:layout_marginTop="@dimen/dimen20"
    android:layout_gravity="right"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/xiaoyuan"
        android:drawablePadding="@dimen/dimen10"
        android:layout_marginLeft="@dimen/dimen10"
        android:textSize="@dimen/textSize30"
        android:textColor="@android:color/white"
        android:text="@string/shensleep"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/xiaoyuan1"
        android:drawablePadding="@dimen/dimen10"
        android:layout_marginLeft="@dimen/dimen10"
        android:textSize="@dimen/textSize30"
        android:textColor="@android:color/white"
        android:text="@string/qiansleep"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/xiaoyuan2"
        android:layout_marginLeft="@dimen/dimen10"
        android:drawablePadding="@dimen/dimen10"
        android:textSize="@dimen/textSize30"
        android:textColor="@android:color/white"
        android:text="@string/qingsleep"
        />
</LinearLayout>
</FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    >
    <TextView
        android:id="@+id/xinlv_text"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/lvnumber"
        android:textColor="@android:color/white"
        android:textSize="@dimen/textSize40"
        />
    <TextView
        android:id="@+id/qinxing_text"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:text="@string/xingnumber"
        android:textSize="@dimen/textSize40"
        />
</LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            >
            <TextView
                android:id="@+id/huxi_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:text="@string/hxnumber"
                android:textSize="@dimen/textSize40"
                />
            <TextView
                android:id="@+id/tidong_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:text="@string/tdnumber"
                android:textSize="@dimen/textSize40"
                />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</LinearLayout>