<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_below="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="@dimen/dimen200"
            android:layout_height="@dimen/dimen200"
            android:background="@mipmap/ic_launcher"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/dimen30"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sbname"
                    android:textSize="@dimen/dimen30"
                    android:textColor="@android:color/holo_purple"
                    android:layout_marginTop="@dimen/dimen40"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen20"
                    android:text="@string/sleepjc"
                    android:textSize="@dimen/textSize30"
                    android:textColor="@android:color/holo_purple"
                    android:layout_marginTop="@dimen/dimen40"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_purple"
                    android:text="@string/sbdianliang"
                    android:textSize="@dimen/textSize30"
                    android:layout_marginTop="@dimen/dimen20"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen20"
                    android:text="@string/huoqudianliang"
                    android:textSize="@dimen/textSize30"
                    android:textColor="@android:color/holo_purple"
                    android:layout_marginTop="@dimen/dimen20"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_purple"
                    android:text="@string/sbqingkuang"
                    android:textSize="@dimen/textSize30"
                    android:layout_marginTop="@dimen/dimen20"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen20"
                    android:text="@string/weilianjie"
                    android:textSize="@dimen/textSize30"
                    android:textColor="@android:color/holo_red_dark"
                    android:layout_marginTop="@dimen/dimen20"
                    />
            </LinearLayout>
            <Button
                android:id="@+id/shishi_context"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen20"
                android:text="@string/selecttimedata"
                android:background="#00000000"
                />

        </LinearLayout>


    </LinearLayout>
</LinearLayout>