<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/menu_shezhi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical"
        android:textColor="@android:color/white"
        android:padding="@dimen/dimen30"
        android:text="@string/stopsleep"
        android:textSize="@dimen/textSize30"
        />
    <TextView
        android:id="@+id/menu_zaichuang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical"
        android:padding="@dimen/dimen30"
        android:textColor="@android:color/white"
        android:text="@string/startsleep"
        android:textSize="@dimen/textSize30"
        />
    <TextView
        android:id="@+id/menu_guanyu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical"
        android:padding="@dimen/dimen30"
        android:textColor="@android:color/white"
        android:text="@string/jiebangsleep"
        android:textSize="@dimen/textSize30"
        />
</LinearLayout>