<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    tools:context=".activity.RecyclerviewActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar1"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="#00000000"
        android:elevation="@dimen/dimen5"
        app:titleTextAppearance="@style/AppTheme_a"
        app:navigationIcon="@drawable/ic_title_back"
        app:title="睡眠检测器"
        app:titleTextColor="@android:color/white"
        />
<LinearLayout
    android:id="@+id/img_text"
    android:layout_below="@+id/main_toolbar"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dimen50"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen300"
            android:src="@drawable/icon_exp_matress"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sbname"
                android:textSize="@dimen/textSize30"
                android:textColor="@android:color/holo_purple"
                android:layout_marginTop="@dimen/dimen40"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen20"
                android:text="睡眠监测器"
                android:textSize="@dimen/textSize30"
                android:textColor="@android:color/holo_purple"
                android:layout_marginTop="@dimen/dimen40"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_purple"
                android:text="@string/sbdianliang"
                android:textSize="@dimen/textSize30"
                android:layout_marginTop="@dimen/dimen20"
                />
            <TextView
                android:id="@+id/elec_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen20"
                android:text="@string/huoqudianliang"
                android:textSize="@dimen/textSize30"
                android:textColor="@android:color/holo_purple"
                android:layout_marginTop="@dimen/dimen20"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_purple"
                android:text="@string/sbqingkuang"
                android:textSize="@dimen/textSize30"
                android:layout_marginTop="@dimen/dimen20"
                />
            <TextView
                android:id="@+id/conn_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen20"
                android:text="@string/weilianjie"
                android:textSize="@dimen/textSize30"
                android:textColor="@android:color/holo_red_dark"
                android:layout_marginTop="@dimen/dimen20"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen40"
            android:layout_marginTop="@dimen/dimen30"
            >

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dimen60"
                >
                <TextView
                    android:id="@+id/shi_shi"
                    android:layout_width="@dimen/dimen150"
                    android:layout_height="@dimen/dimen50"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/dimen120"
                    android:text="@string/selecttimedata"
                    android:textSize="@dimen/textSize25"
                    android:textColor="@android:color/white"
                    />
                <TextView
                    android:id="@+id/text_xl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/dimen400"
                    android:text="@string/lvnumber"
                    android:textSize="@dimen/textSize25"
                    android:textColor="@android:color/white"
                    />
            </LinearLayout>
            <com.example.administrator.songshuapplication.modle.ChartView
                android:id="@+id/ziding_view"
                android:layout_width="@dimen/dimen800"
                android:layout_height="@dimen/dimen100"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen50"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dimen96"
                >
                <TextView
                    android:id="@+id/shi_shi1"
                    android:layout_width="@dimen/dimen150"
                    android:layout_height="@dimen/dimen50"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/dimen120"
                    android:text="@string/selecttimedata"
                    android:textSize="@dimen/textSize25"
                    android:textColor="@android:color/white"
                    />
                <TextView
                    android:id="@+id/text_xl1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/dimen400"
                    android:text="@string/hxnumber"
                    android:textSize="@dimen/textSize25"
                    android:textColor="@android:color/white"
                    />
            </LinearLayout>
            <com.example.administrator.songshuapplication.modle.MyGroupView
               android:id="@+id/sin_id"
               android:layout_marginTop="@dimen/dimen80"
                android:layout_width="@dimen/dimen730"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen100"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>



</RelativeLayout>
